--- a/bistro/index.html
+++ b/bistro/index.html
@@ -1,8 +1,42 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title></title>
+    <title>Black Goose Bistro</title>
+    <style>
+     
+     body {
+      background-color: #faf2e4;
+      margin: 0 15%;
+      Font-family: sans-serif;
+      }
+      
+     h1 {
+      text-align: center;
+      font-family: serif;
+      font-weight: normal;
+      text-transform: uppercase;
+      border-bottom: 1px solid #57b2dc;
+      margin-top: 30px
+      }
+   
+     h2 {
+      color: #di633c;
+      font-size: 1em'
+     }
+
+    </style>
   </head>
   <body>
+  <h1><img src="blackgoose.png" alt="Black Goose Logo"><br>Black Goose Bistro</h1>
+  
+  <h2>The Restaurant</h2>
+  <p>The Black Goose Bistro offers casual lunch and dinner fate in hip atmosphere. The meny changes regularly to highlight the freshest indredients.</p>
+  
+  <h2>Catering</h2>
+  <p>You have fun... <em>we'll handle the cooking</em>. Black Goose Catering can handle events from snacks for bridge club to elegant corporate fundraisers.</p>
+  
+  <h2>Location and Hours</h2>
+  <p>Seekonk, Massachusetts;
+  Monday through Thursday, 11am to 9pm, Friday and Saturday, 11am to mignight.</p>
   </body>
 </html>
