--- a/jenskitchen/index.html
+++ b/jenskitchen/index.html
@@ -24,7 +24,7 @@
     </ul>
     <h2>Good Food on the Web</h2>
     <ul>
-      <li>The Food Network</li>
+      <li><a href="http://www.foodnetwork.com/">The Food Network</a></li>
       <li>Epicurious </li>
     </ul>
     <p>            
